Update to google theme, fix input button alignment

--- a/src/definitions/elements/input.less
+++ b/src/definitions/elements/input.less
@@ -328,7 +328,7 @@
 .ui.action.input > .button,
 .ui.action.input > .buttons {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
   white-space: nowrap;
 }
 .ui.action.input > .button > .icon,
